--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -14,7 +14,7 @@ provider:
 
   environment:
     TODOS_TABLE: Todos-${self:provider.stage}
-    TODOS_ID_INDEX: TodoIdIndex
+    TODO_ID_INDEX: TodoIdIndex
 
 functions:
   Auth:
@@ -46,7 +46,6 @@ functions:
           - dynamodb:PutItem
         Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
 
-  # TODO: Configure this function
   UpdateTodo:
     handler: src/lambda/http/updateTodo.handler
     events:
@@ -54,6 +53,15 @@ functions:
           method: patch
           path: todos/{todoId}
           authorizer: Auth
+    iamRoleStatements:
+      - Effect: Allow
+        Action:
+          - dynamodb:PutItem
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
+      - Effect: Allow
+        Action:
+          - dynamodb:Query
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}/index/${self:provider.environment.TODO_ID_INDEX}
 
   # TODO: Configure this function
   DeleteTodo:
@@ -93,7 +101,7 @@ resources:
         BillingMode: PAY_PER_REQUEST
         TableName: ${self:provider.environment.TODOS_TABLE}
         GlobalSecondaryIndexes:
-          - IndexName: ${self:provider.environment.TODOS_ID_INDEX}
+          - IndexName: ${self:provider.environment.TODO_ID_INDEX}
             KeySchema:
               - AttributeName: todoId
                 KeyType: HASH
